# civil-apu-rv

./: .gitignore  CIVILAPURV.txt  README.md  agents.md  ajustes2.txt  preguntas frank.txt  tasks.md
00_documentacion/: INTERFAZ_OBJETIVO.md  arquitectura_tecnica_apu_civil.md  modelo_datos_apu_civil.md  reglas_calculo_apu.md  requerimientos_iniciales_apu_civil.md  validacion_franklin_apu_civil.md
02_app/civil-apu-app/: .gitignore  package-lock.json  package.json  prisma.config.ts
02_app/civil-apu-app/Templates/: APU_Franklin_Template.xlsx  APU_Franklin_Template_Codex_Limpia.xlsx
02_app/civil-apu-app/app/: layout.tsx  page.tsx
02_app/civil-apu-app/app/desktop/: actions.ts
02_app/civil-apu-app/app/equipment/: actions.test.ts  actions.ts  page.tsx
02_app/civil-apu-app/app/labor/: actions.test.ts  actions.ts  page.tsx
02_app/civil-apu-app/app/materials/: actions.test.ts  actions.ts  page.tsx
02_app/civil-apu-app/docs/: desktop-prototype.md
02_app/civil-apu-app/prisma/: schema.prisma
02_app/civil-apu-app/scripts/: import-ipco-denominations.test.ts  import-ipco-denominations.ts  reset-dev-data.ts
02_app/civil-apu-app/src-tauri/: Cargo.toml  tauri.conf.json
02_app/civil-apu-app/src-tauri/capabilities/: default.json
02_app/civil-apu-app/src-tauri/src/: main.rs
03_base_datos/: estrategia_importacion_excel_apu_civil.md  modelo_prisma_apu_civil.md
04_pruebas/: casos_validacion_apu_civil.md  pruebas_calculo_apu_civil.md
05_producto/: demo_script_apu_civil.md  propuesta_comercial_apu_civil.md  roadmap_apu_civil.md
(+207 files in other folders)
