[package]
name = "civil-apu-desktop-prototype"
version = "0.1.0"
description = "Exploratory Tauri desktop shell for Civil APU RV"
authors = ["Civil APU RV"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
